--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -79,21 +79,31 @@ RUN curl -fsSL -o /usr/local/bin/phing https://www.phing.info/get/phing-latest.p
 
 {{#hasFeature 'postgresql'}}
 
-RUN apt-get update -y && apt-get install -y gnupg && rm -rf /var/lib/apt/lists/* \
+RUN apt-get update -y && apt-get install -y gnupg lsb-release && rm -rf /var/lib/apt/lists/* \
 && curl -fsSL https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - \
-&& echo "deb http://apt.postgresql.org/pub/repos/apt/ stretch-pgdg main" >> /etc/apt/sources.list.d/postgresql.list \
-&& apt-get update -y && apt-get install -y postgresql-client-9.6 && rm -rf /var/lib/apt/lists/*
+&& echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" >> /etc/apt/sources.list.d/postgresql.list \
+&& apt-get update -y && apt-get install -y postgresql-client-{{getFeatureOption 'postgresql' 'postgresClientVersion'}} && rm -rf /var/lib/apt/lists/*
 {{/hasFeature}}
-{{#hasFeature 'mysql' 'mariadb'}}
+{{#hasFeature 'mysql'}}
 
+RUN apt-get update -y && apt-get install -y debconf-utils lsb-release wget gnupg
+RUN echo 'mysql-apt-config mysql-apt-config/select-server select mysql-{{getFeatureOption 'mysql' 'mysqlClientVersion'}}' | debconf-set-selections \
+&& curl -fsSL -o mysql-apt-config.deb https://dev.mysql.com/get/mysql-apt-config_0.8.13-1_all.deb && dpkg -i mysql-apt-config.deb
 RUN apt-get update -y && apt-get install -y mysql-client && rm -rf /var/lib/apt/lists/*
+{{/hasFeature}}
+{{#hasFeature 'mariadb'}}
+
+RUN apt-get update -y && apt-get -y install software-properties-common gnupg lsb-release  \
+&& apt-key adv --recv-keys --keyserver hkp://keyserver.ubuntu.com:80 0xF1656F24C74CD1D8 \
+&& add-apt-repository "deb [arch=amd64] http://ftp.igh.cnrs.fr/pub/mariadb/repo/{{getFeatureOption 'mariadb' 'mariadbClientVersion'}}/debian $(lsb_release -cs) main" \
+&& apt-get update -y && apt-get install -y mariadb-client && rm -rf /var/lib/apt/lists/*
 {{/hasFeature}}
 {{#inArray phpTools "wkhtmltopdf"}}
 
 RUN apt-get update -y && apt-get install -y lsb-release \
-&& curl -fsSL -o wkhtmltopdf.deb https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.$(lsb_release -cs)_amd64.deb \
+&& curl -fsSL -o wkhtmltox.deb https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.$(lsb_release -cs)_amd64.deb \
 && apt-get install -y ./wkhtmltopdf.deb && rm -rf /var/lib/apt/lists/* \
-&& rm wkhtmltopdf.deb
+&& rm wkhtmltox.deb
 {{/inArray}}
 {{#hasFeature 'mailcatcher'}}
 
@@ -119,6 +129,7 @@ RUN usermod -u ${HOST_UID:-1000} www-data \
 {{#inArray phpTools "composer"}}
 
 RUN chown -R www-data:www-data $COMPOSER_HOME
+RUN chown -R www-data:www-data /var/www
 RUN mkdir -p "$COMPOSER_HOME/cache" && chown -R www-data:www-data "$COMPOSER_HOME/cache"
 VOLUME /composer/cache
 {{/inArray}}
