--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -11,8 +11,8 @@ autostash DOCKER_DEVBOX_DOMAIN_PREFIX={{projectName}}
 # Domain name to use for virtual host
 autostash DOCKER_DEVBOX_DOMAIN=test
 
-# Enable SSL Certificate generation with cfssl-cli
-autostash DOCKER_DEVBOX_CFSSL_ENABLED=false
+# Enable SSL Certificate generation. Can be "mkcert", "cfssl-cli" or "false" to disable.
+autostash DOCKER_DEVBOX_SSL=false
 
 # Docker compose restart policy for services containers
 autostash DOCKER_DEVBOX_RESTART_POLICY="no"
